# aibot

./: .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
app/: config.py  database.py  models.py
