[build-system]
requires = ["setuptools>=75,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "aibot"
version = "0.1.0"
description = "Service for collecting, generating, and publishing news posts"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { file = "LICENSE" }
dependencies = [
    "asyncpg>=0.30,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "python-dotenv>=1.0,<2",
    "sqlalchemy[asyncio]>=2.0.36,<3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
warn_unused_ignores = true
